eks-cluster/main.tf
locals {
  project_name = "mlsecops"
}

#---------------------------------------------------------------#
#----------------- Create 1 VPC with 2 subnets -----------------#
#---------------------------------------------------------------#

resource "aws_vpc" "vpc" {
  cidr_block = var.vpc_cidr
  tags = {
    Name = "${local.project_name}-vpc"
  }
}

resource "aws_subnet" "public_subnet" {
  vpc_id            = aws_vpc.vpc.id
  count             = length(var.public_subnet_cidr)
  cidr_block        = var.public_subnet_cidr[count.index]
  availability_zone = var.az_public[count.index]
  tags = {
    Name                     = "${local.project_name}-public-subnet-${count.index}"
    "kubernetes.io/role/elb" = "1"
    "kubernetes.io/cluster/${var.cluster_config.name}" = "shared"
  }
}

resource "aws_subnet" "private_subnet" {
  vpc_id            = aws_vpc.vpc.id
  count             = length(var.private_subnet_cidr)
  cidr_block        = var.private_subnet_cidr[count.index]
  availability_zone = var.az_private[count.index]
  tags = {
    Name                              = "${local.project_name}-private-subnet-${count.index}"
    "kubernetes.io/role/internal-elb" = "1"
    "kubernetes.io/cluster/${var.cluster_config.name}" = "shared"
  }
}

#---------------------------------------------------------------#
#------------------ Create 1 Internet Gateway ------------------#
#--------------------- Attach IGW to VPC -----------------------#
#---------------------------------------------------------------#

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "${local.project_name}-igw"
  }
}

#---------------------------------------------------------------#
#---------------- Create Default Security Group ----------------#
#---------------------------------------------------------------#

resource "aws_default_security_group" "default_sg" {
  vpc_id = aws_vpc.vpc.id

  ingress {
    protocol  = -1
    self      = true
    from_port = 0
    to_port   = 0
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${local.project_name}-default-sg"
  }
}

resource "aws_eip" "nat_eip" {
  domain = "vpc"
}

resource "aws_nat_gateway" "natgw" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id     = aws_subnet.public_subnet[0].id
  tags = {
    Name = "${local.project_name}-natgw"
  }
}

#---------------------------------------------------------------#
#------------------ Create Public Route Table ------------------#
#------------------------ Route to IGW -------------------------#
#---------------------------------------------------------------#

resource "aws_route_table" "public_rtb" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block = "0.0.0.0/0" # Destination cidr block
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "${local.project_name}-public_rtb"
  }
}

#---------------------------------------------------------------#
#------------------ Create Private Route Table -----------------#
#----------------------- Route to NATGW ------------------------#
#---------------------------------------------------------------#

resource "aws_route_table" "private_rtb" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.natgw.id
  }

  tags = {
    Name = "${local.project_name}-private_rtb"
  }
}

#---------------------------------------------------------------#
#----------------- Associate Public Route Table ----------------#
#--------------------- to public Subnet ------------------------#
#---------------------------------------------------------------#

resource "aws_route_table_association" "public_rtb_asso" {
  for_each       = { for idx, s in aws_subnet.public_subnet : idx => s }
  subnet_id      = each.value.id
  route_table_id = aws_route_table.public_rtb.id
}

#---------------------------------------------------------------#
#---------------- Associate Private Route Table ----------------#
#--------------------- to private Subnet -----------------------#
#---------------------------------------------------------------#

resource "aws_route_table_association" "private_rtb_asso" {
  for_each       = { for idx, s in aws_subnet.private_subnet : idx => s }
  subnet_id      = each.value.id
  route_table_id = aws_route_table.private_rtb.id
}

# SECURITY GROUPS
resource "aws_security_group" "sec_groups" {
  for_each    = { for sec in var.security_groups : sec.name => sec }
  name        = each.value.name
  description = each.value.description
  vpc_id      = aws_vpc.vpc.id

  dynamic "ingress" {
    for_each = try(each.value.ingress, [])
    content {
      description      = ingress.value.description
      from_port        = ingress.value.from_port
      to_port          = ingress.value.to_port
      protocol         = ingress.value.protocol
      cidr_blocks      = ingress.value.cidr_blocks
      ipv6_cidr_blocks = ingress.value.ipv6_cidr_blocks
    }
  }

  dynamic "egress" {
    for_each = try(each.value.egress, [])
    content {
      description      = egress.value.description
      from_port        = egress.value.from_port
      to_port          = egress.value.to_port
      protocol         = egress.value.protocol
      cidr_blocks      = egress.value.cidr_blocks
      ipv6_cidr_blocks = egress.value.ipv6_cidr_blocks
    }
  }
}

resource "null_resource" "wait-for-iam-policy" {
  provisioner "local-exec" {
    interpreter = ["bash", "-c"]  
    command = "sleep 179"
  }
  depends_on = [ aws_iam_role_policy_attachment.GithubActionRoleAttachment ]
}

# EKS Cluster
resource "aws_eks_cluster" "eks-cluster" {
  name     = var.cluster_config.name
  role_arn = aws_iam_role.EKSClusterRole.arn
  version  = var.cluster_config.version

  vpc_config {
  subnet_ids = flatten([
    aws_subnet.public_subnet[*].id,
    aws_subnet.private_subnet[*].id
  ])
  security_group_ids = [
    aws_default_security_group.default_sg.id
  ]
}

  access_config {
    authentication_mode = "API_AND_CONFIG_MAP"
  }

  depends_on = [
    aws_iam_role_policy_attachment.AmazonEKSClusterPolicy,
    aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy,
    aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly,
    aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy,
    aws_iam_policy.GitHubEKSAccess,
    aws_iam_role_policy_attachment.GithubActionRoleAttachment,
    null_resource.wait-for-iam-policy
  ]

  enabled_cluster_log_types = ["api", "audit", "authenticator","controllerManager","scheduler"]

}

provider "kubernetes" {
  host                   = aws_eks_cluster.eks-cluster.endpoint
  cluster_ca_certificate = base64decode(aws_eks_cluster.eks-cluster.certificate_authority[0].data)
  token                  = data.aws_eks_cluster_auth.cluster.token
}

# NODE GROUP
resource "aws_eks_node_group" "node-ec2" {
  for_each        = { for node_group in var.node_groups : node_group.name => node_group }
  cluster_name    = aws_eks_cluster.eks-cluster.name
  node_group_name = each.value.name
  node_role_arn   = aws_iam_role.NodeGroupRole.arn
  subnet_ids      = aws_subnet.private_subnet[*].id

  scaling_config {
    desired_size = try(each.value.scaling_config.desired_size, 1)
    max_size     = try(each.value.scaling_config.max_size, 3)
    min_size     = try(each.value.scaling_config.min_size, 1)
  }

  update_config {
    max_unavailable = try(each.value.update_config.max_unavailable, 1)
  }

  ami_type       = each.value.ami_type
  instance_types = each.value.instance_types
  capacity_type  = each.value.capacity_type
  disk_size      = each.value.disk_size
}

resource "aws_eks_addon" "addons" {
  for_each          = { for addon in var.addons : addon.name => addon }
  cluster_name      = aws_eks_cluster.eks-cluster.id
  addon_name        = each.value.name
  addon_version     = each.value.version
  resolve_conflicts_on_create = "OVERWRITE"
  resolve_conflicts_on_update = "OVERWRITE"
}

resource "aws_iam_openid_connect_provider" "default" {
  url             = "https://${local.oidc}"
  client_id_list  = ["sts.amazonaws.com"]
  thumbprint_list = ["9e99a48a9960b14926bb7f3b02e22da2b0ab7280"]
}

resource "kubernetes_storage_class" "default_gp3" {
  metadata {
    name = "gp3"
    annotations = {
      "storageclass.kubernetes.io/is-default-class" = "true"
    }
  }

  storage_provisioner = "ebs.csi.aws.com"
  reclaim_policy       = "Delete"
  volume_binding_mode  = "WaitForFirstConsumer"

  parameters = {
    type = "gp3"
    fsType = "ext4"
    iops = "3000"
    throughput = "125"
  }

  depends_on = [
    aws_eks_cluster.eks-cluster,
    aws_eks_access_entry.cluster-access-entry,
    aws_eks_access_policy_association.cluster-access-entry-policy,
    aws_eks_addon.addons["aws-ebs-csi-driver"],
    aws_eks_node_group.node-ec2
  ]
}

resource "aws_eks_access_entry" "cluster-access-entry" {
  cluster_name      = aws_eks_cluster.eks-cluster.name
  principal_arn     = "arn:aws:iam::625715126488:role/GithubActions"
  type              = "STANDARD"
}

resource "aws_eks_access_policy_association" "cluster-access-entry-policy" {
  cluster_name  = aws_eks_cluster.eks-cluster.name
  policy_arn    = "arn:aws:eks::aws:cluster-access-policy/AmazonEKSClusterAdminPolicy"
  principal_arn = "arn:aws:iam::625715126488:role/GithubActions"

  access_scope {
    type       = "cluster"
  }
}

resource "aws_db_subnet_group" "mlflow" {
  name       = "${local.project_name}-mlflow-dbsubnet"
  subnet_ids = aws_subnet.private_subnet[*].id
  tags = {
    Name = "${local.project_name}-mlflow-dbsubnet"
  }
}

resource "aws_security_group" "rds_pg" {
  name        = "${local.project_name}-rds-sg"
  description = "Allow PostgreSQL (5432) from EKS"
  vpc_id      = aws_vpc.vpc.id

  ingress {
    description     = "PostgreSQL from EKS Default SG"
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_default_security_group.default_sg.id]
  }

  ingress {
    description     = "PostgreSQL from EKS Cluster SG"
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_eks_cluster.eks-cluster.vpc_config[0].cluster_security_group_id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = { Name = "${local.project_name}-rds-sg" }
}


resource "aws_db_instance" "mlflowbackend" {
  identifier            = "${local.project_name}mlflowbackend"
  engine                = "postgres"
  #engine_version        = var.rds.engine_version
  instance_class        = var.rds.instance_class

  db_name               = var.rds.db_name
  username              = var.rds.username
  password              = local.rds_password

  port                  = var.rds.port
  allocated_storage     = var.rds.allocated_gb
  max_allocated_storage = var.rds.max_allocated_gb

  storage_type          = "gp3"
  storage_encrypted     = false
  publicly_accessible   = false
  multi_az              = var.rds.multi_az

  vpc_security_group_ids = [aws_security_group.rds_pg.id]
  db_subnet_group_name   = aws_db_subnet_group.mlflow.name

  backup_retention_period    = var.rds.backup_retention
  auto_minor_version_upgrade = true
  copy_tags_to_snapshot      = true
  deletion_protection        = false
  skip_final_snapshot        = true
  apply_immediately          = true

  tags = {
    Name        = "${local.project_name}-mlflow-backend"
    Project     = local.project_name
  }

  depends_on = [aws_db_subnet_group.mlflow]
}
